# ChangeLog for net-news/leechcraft-aggregator
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-news/leechcraft-aggregator/ChangeLog,v 1.19 2012/10/08 16:02:54 pinkbyte Exp $

*leechcraft-aggregator-0.5.85 (08 Oct 2012)

  08 Oct 2012; Sergey Popov <pinkbyte@gentoo.org>
  +leechcraft-aggregator-0.5.85.ebuild:
  Bump LeechCraft to 0.5.85, thanks to 0xd34df00d

*leechcraft-aggregator-0.5.80 (13 Aug 2012)

  13 Aug 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-aggregator-0.5.80.ebuild:
  Bump LeechCraft to 0.5.80, thanks to 0xd34df00d

*leechcraft-aggregator-0.5.75 (19 Jul 2012)

  19 Jul 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-aggregator-0.5.75.ebuild, -leechcraft-aggregator-0.4.99.ebuild,
  -leechcraft-aggregator-0.5.0.ebuild, -leechcraft-aggregator-0.5.60.ebuild,
  -leechcraft-aggregator-0.5.65.ebuild:
  Removed old versions, bumped to 0.5.75

  15 Jul 2012; Michael Palimaka <kensington@gentoo.org>
  leechcraft-aggregator-0.4.99.ebuild, leechcraft-aggregator-0.5.0.ebuild,
  leechcraft-aggregator-0.5.60.ebuild, leechcraft-aggregator-0.5.65.ebuild,
  leechcraft-aggregator-0.5.70.ebuild, leechcraft-aggregator-9999.ebuild:
  Add missing slot dependencies on Qt.

  07 Jul 2012; Johannes Huber <johu@gentoo.org>
  leechcraft-aggregator-0.5.70.ebuild:
  Stable for x86, wrt bug #424613

  04 Jul 2012; Agostino Sarubbo <ago@gentoo.org>
  leechcraft-aggregator-0.5.70.ebuild:
  Stable for amd64, wrt bug #424613

*leechcraft-aggregator-0.5.70 (31 May 2012)

  31 May 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-aggregator-0.5.70.ebuild:
  Bump LeechCraft to 0.5.70 "Hessian Blade"

*leechcraft-aggregator-0.5.65 (22 Apr 2012)

  22 Apr 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-aggregator-0.5.65.ebuild:
  Bump net-news/leechcraft-aggregator to 0.5.65, thanks to 0xd34df00d

  07 Apr 2012; Markus Meier <maekke@gentoo.org>
  leechcraft-aggregator-0.4.99.ebuild: