@@ -1,11 +1,19 @@
-DIST leechcraft-0.5.70.tar.xz 4793076 SHA256 f9b6ff57005a4883042256b699451382ae5d3325e43f44097fbde3fdd77b859f SHA512 e3e5141c7f4b2061fc4e185c21a74f1674c1fa8219cec465d3401f90e6f9cd6a54df1dda40a8575e17e3278842586778e9f091f807c9e06dd4b3dd1544fbc837 WHIRLPOOL 52deb1476462c85119882851892e57af4f08e972e652a0de70b6a794beb3550a45626397664d49b523d7916649e84523f46dc5d54d20846c151d4491289fa642
-DIST leechcraft-0.5.75.tar.xz 4849324 SHA256 18c0b98be7738ae87e131850529e9c7c35e511b7d40e456f4f200b7d4ef1e887 SHA512 7668a5b6d01eebdb763608c03709aebeffca75c6207ec4b6f743116544ef12396bbf3ca02c49561fd4be0e01a56c527345d9daf42d6595d0948db8651b5380c7 WHIRLPOOL 83b0626d100c3c46f82737a39ef2ec431a59f9df92e8d4d32f2fbd013fa58e8747fa8f2fa9ed95a2932af1c938734c5160cd71291c3996d7256cd8ad67743ddd
-DIST leechcraft-0.5.80.tar.xz 4984124 SHA256 9399d260804a692135ef5d192a50f07ebb6049d74e556d75e36a944fa132af52 SHA512 2abcc8110c6331e6572b73697d95bb0283d0fc7f5568e7296c07c19789031621a629e3ca42206a15be128fb4877138835641ec34d7bdece0979137fa233ae7e9 WHIRLPOOL 86c16b1f58980c63e376ff6bd0a1f51eb98b8dd50eea9d80cd8918626a38fbbfaa62623cd57c6b68470980903f7af03f57fc133f04a16076cc1bf4f1d611ff2e
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST leechcraft-0.5.85.tar.xz 5463144 SHA256 3208d8013911c9d848dc007554b0a6e22eee0ed8e16c25a11da9a7931650f694 SHA512 76fb2e9cc9be1219b603f2ea04af945b63376d0e0834a46a668eb23c66a3939d4239b410235302866523cd26918e1dd09c7a6e868845e9d458df96829ba81a70 WHIRLPOOL 84a141d70400201a481c9ae1fd362d079e0357022fd16398053264e7b97996b62b44ae2190cb44ab3c537627d6586eca38de18aab8b2490f26bcc92183e515b4
-EBUILD leechcraft-aggregator-0.5.70.ebuild 1109 SHA256 405f5c27a880279f0ccaaee7c9e3dbd1f3258a841791671198593c63c20ace2c SHA512 f2e9c8c0ae9530a24617bf332346dc2bc79965ef7a1fa34de8ade1fe98413da1c574b4b3064611d595abbde4fbb971613d45187bb9d6a0eec1775e1f97310219 WHIRLPOOL 621e37c4266b55ee336d3dae56fb1a1857c511e6b73125b26da26ff635a450e419f1047188986930227238116585d9deabeae9b13dcb5a750379d355b7faa6f5
-EBUILD leechcraft-aggregator-0.5.75.ebuild 1110 SHA256 52a01f6e6dd4f4a5f671d5470ce7b7a36b4b35143c741cf8ac007bf5239ed26e SHA512 11a29a996cd8607bf15db9ed02099384e5198b01c6c064da5c8456a481104fb188531365f94c2e03c8689dbd2bb6353fa9d59bc7b18ddb0f57092ec9b117374e WHIRLPOOL fc8c3fe092708c83b862ad9a6d49f9636a45d269c253dfbdc5d422dccef3a9e534a9dbef11437b42d3a0421e7ccb5440a7c35f4d894e4c2764caf3afa6c26b8f
-EBUILD leechcraft-aggregator-0.5.80.ebuild 1110 SHA256 e1e00a8204c37036c2016e11ec089a2d80a8b740ff4b2ef9ca480b10c9402080 SHA512 def3e3b004665cf95ecb10c1d6f5966b92dde12d803657619f626c80308c5ea792cd3da32e72e8b085df0846dbf4c7ed055738a043b4b595c3dfb1830f738fa2 WHIRLPOOL 6c9e689c114f4b910eb12dfdf5f27974d86cef4ff64314b4fd1d676f5b170eb294f4afa6146c6bd91aa2e3916e9cf687a973731705b1c2e6146cc09ee6667919
 EBUILD leechcraft-aggregator-0.5.85.ebuild 1109 SHA256 46f9e63c7f89e210ce09c7a07cee853102b8a33bccbcc271f2550b28abb00616 SHA512 6abb807dbcb8e0e1cb0fca33ece6a20090884707fe55a0c1b69d2123b671a48f61152ecc88d424e668427e4b7af568671cc60c6027c36d1dfc6fde4cdeecfa92 WHIRLPOOL 5cc4d0b6d1b4f1f906f4eb810d06262e3aa4df35c2ebce8f8bf3a542e27912de40d44b45fbca16b150cb3f019f5a9ddf333bfd0f558e5db2230124b6db5634ae
 EBUILD leechcraft-aggregator-9999.ebuild 1098 SHA256 64d46df42c1f5e2e4dae826990842830975aca06e4deaff0577cb6f98e8dfe4d SHA512 8a6ff5d32faa2bedeefec118cb3cfce4b4b18a7960b59bd84de9b74c216fbe8a574b7e9eff1a2f344b659faf6adf9512750cd2871e44658f789e34173309c82e WHIRLPOOL ccd6ee6d9f5c1cb5820a4b21ebeaafe65fd3c87f2aaf378522722ec9504994562227e46b0d322ad61818973becfa80d8ccd5e1a3aeaa1bae70f1f61831188f1b
-MISC ChangeLog 4183 SHA256 b014273bd4f1a2f88dfbb023f1ec4dfe3e39d8f238b8aeefc5a6ed687e00c061 SHA512 5d4ed4cdc9e32aeeea1584bb30ebb14f1782e3e7ce87fff07c7d1154d8a3d890c8e6120003e590190991181ad7195150a149374aa0708fbd68c50537847a8008 WHIRLPOOL e0d5928abc8c03b7b61ca27bfa2d6ed4c08938541db6d6bc999a5d0c2ae7819a2dd28b3e272148ce622d7b274a514da1e82442c6108150c0534d1e84af9d11c4
+MISC ChangeLog 4388 SHA256 8c7c1eff15e7420d7c0eefbb7f0f4d895bfa4e5e4f301fa63dcb25ae7ae693e2 SHA512 a8ca99da527beea8107f45f7bbda99c7714d845e6f3a7c6109eebc50f5203eaa9e67b56789860e6e51be1f7cb47738196bb7efff932700722a0b279669d1cfed WHIRLPOOL 03640079713e4e88d707682ffd4d94c6a8e345adc7dfd17789d59c19205577fbbf272b6a74d4ac601966d9dc9262589227cf0258d10dfc7fcdccc18699ba5dad
 MISC metadata.xml 164 SHA256 d3d50c47cc72568dcc457fe11ddfc6849ba6572bc2d581aad1deac910ee1d488 SHA512 ce478accd06c9c530d86b3ca8abaf3680428a7ab07ed8bb5b78e60c7e3240c3be349993f73e2ef904642efec5cd9c8abb7196675b46723103290ef9ab5d1cc10 WHIRLPOOL 4c2d59059bc69ff27c720b093f582968e2778d23875e0f7d3edba0ec6634e1b50e7403974c4a32638eeaae4d7baf45ca163e5e80f5bd692590b7d075882d51f0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBCAAGBQJQ0XYUAAoJEAmJmMX429reT70H/AzDfaVuaZMG780zuDL8PnTm
+1lu0vh2p1DpHjjg6OuMmDm4JbKzB82M7rG7EVybxMvSbZHPt8ueYGWiizq1W5NyK
+xzeAyogPMe6XVAsQw17IZrjGLajUweXCzo0IwhYq35qqO6S/GD0SP52YGJyFn0Hn
+ntazDUEf79ibWX7d9jsDgEF3bvZf8L70TJuj/3QqbUc2ZvW7mUblCjrkcK9DQGFq
+WO79Bm3hPuKIGt8DCDUsnleafQaUmNRlzRO7hZJ/LFSQ/etDwDMos6IrGr60nVsi
+XspKdYLZa9Odpqjm2aLOhPVClBSCskckEYpdgebLzk6pTJosIRHEJXkCNA/NuY4=
+=wD9h
+-----END PGP SIGNATURE-----
