@@ -1,6 +1,11 @@
 # ChangeLog for net-news/leechcraft-aggregator
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-news/leechcraft-aggregator/ChangeLog,v 1.19 2012/10/08 16:02:54 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-news/leechcraft-aggregator/ChangeLog,v 1.20 2012/12/19 08:07:51 maksbotan Exp $
+
+  19 Dec 2012; Maxim Koltsov <maksbotan@gentoo.org>
+  -leechcraft-aggregator-0.5.70.ebuild, -leechcraft-aggregator-0.5.75.ebuild,
+  -leechcraft-aggregator-0.5.80.ebuild:
+  Remove old LeechCraft versions
 
 *leechcraft-aggregator-0.5.85 (08 Oct 2012)
 
